// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic snapshot with empty props 1`] = `
<div
  className=""
/>
`;

exports[`basic snapshot with props 1`] = `
<div
  className=""
>
  CartItem(undefined)
  CartItem(undefined)
</div>
`;
